# prompt-ng

./: .gitignore  DESCRIPTION.md  README.md  content  llms.txt  main.py  my_prompt.txt  promptctl.py  pyproject.toml  tmp.txt
assets/docs/: ai_systems_integration.md  bash_variables.md  command_examples.md  command_usage.md  controls_precedence.md  create_and_use_a_pattern_group.md  creating_new_prompt_components.md  glossary.md  more_installation_methods.md  more_installation_options.md  prompt_components_reference.md  prompt_control_layers.md  prompt_controls_in_agentic_systems.md  prompt_pipelines.md  python_integration.md  yaml_file_configuration.md
assets/docs/prompts/agents/: built-in_agents.md  default_agents.md
assets/docs/prompts/content/: built-in_content.md
assets/docs/prompts/controls/: built-in_controls.md  pre_tools_web_lookup.md
assets/docs/prompts/pattern_groups/: built-in_pattern_groups.md
assets/docs/prompts/patterns/: built-in_patterns.md  default_patterns.md
assets/docs/prompts/roles/: built-in_roles.md
assets/docs/prompts/skills/: built-in_skills.md
assets/docs/prompts/tasks/: built-in_tasks.md
content/dev/testing/: boundary_edge_cases.md
docs/: command_examples.md  command_usage.md  create_and_use_a_pattern_group.md  creating_new_prompt_components.md  glossary.md  more_installation_methods.md  new_roles_tasks_and_patterns.md  prompt_components_reference.md  prompt_control_layers.md  python_integration.md  tutorial.md
docs/prompts/agents/: default_agents.md
docs/prompts/pattern_groups/: default_pattern_groups.md
docs/prompts/patterns/: default_patterns.md
docs/prompts/roles/: default_roles.md
docs/prompts/tasks/: default_tasks.md
promptng/:  __init__.py  main.py  search.py
promptng/prompts/patterns/: break_assumptions.md  self_critique.md
promptng/prompts/skills/web-research/: SKILL.md
promptpro/:  __init__.py  main.py
promptpro/prompts/agents/: math_tutor.yaml
promptpro/prompts/agents/dev/: software_testing_agent.yaml
promptpro/prompts/pattern_groups/: didactic_structured.yaml  testing_strict.yaml
promptpro/prompts/patterns/: socratic.md
promptpro/prompts/roles/dev/: software_tester.md
promptpro/prompts/tasks/: explain.md
prompts/agents/: action_agent_controlled.yaml
prompts/controls/post/limits/: explain_like_12.md  for_beginners.md
prompts/controls/post/tone/: tone_style.md
prompts/controls/post/translation/: translate_sp.md
prompts/controls/pre/config/: configurations.md
prompts/controls/pre/language/: input_default.md
prompts/pattern_groups/: didactic.yaml
prompts/patterns/: step_by_step.md
prompts/tasks/: explain.md
(+29 files in other folders)
