[project]
name = "promptpro"
version = "0.1.0"
description = "Composable CLI for building structured AI prompts"
requires-python = ">=3.9,<3.15"

dependencies = [
  "Jinja2",
  "markdown-it-py",
  "MarkupSafe",
  "mdurl",
  "Pygments",
  "pyperclip",
  "PyYAML",
  "rich"
]

[project.scripts]
pp = "promptpro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# When building the wheel, include the promptpro package.
[tool.hatch.build.targets.wheel]
packages = ["promptpro"]

# Install package with prompts
[tool.hatch.build]
include = [
  "promptpro/prompts/**/*.md",
  "promptpro/prompts/**/*.yaml"
]
