[project]
name = "promptng"
version = "0.1.2"
description = "Composable CLI for building structured AI prompts"
readme = "DESCRIPTION.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Esteban Herrera C." }]
requires-python = ">=3.9,<3.15"

dependencies = [
  "Jinja2",
  "markdown-it-py",
  "MarkupSafe",
  "mdurl",
  "Pygments",
  "pyperclip",
  "PyYAML",
  "rich"
]

[project.urls]
Homepage = "https://github.com/estebantechdev/promptpro"
Repository = "https://github.com/estebantechdev/promptpro"
Issues = "https://github.com/estebantechdev/promptpro/issues"

[project.scripts]
pp = "promptpro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# When building the wheel, include the promptpro package.
[tool.hatch.build.targets.wheel]
packages = ["promptpro"]

# Install package with prompts
[tool.hatch.build]
include = [
  "promptpro/prompts/**/*.md",
  "promptpro/prompts/**/*.yaml"
]
