[project]
name = "promptng"
version = "0.1.3"
description = "Composable CLI for building structured AI prompts"
readme = "DESCRIPTION.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Esteban Herrera C." }]
requires-python = ">=3.9,<3.15"

dependencies = [
  "Jinja2",
  "markdown-it-py",
  "MarkupSafe",
  "mdurl",
  "Pygments",
  "pyperclip",
  "PyYAML",
  "rich"
]

[project.urls]
Homepage = "https://github.com/estebantechdev/prompt-ng"
Repository = "https://github.com/estebantechdev/prompt-ng"
Issues = "https://github.com/estebantechdev/prompt-ng/issues"

[project.scripts]
pp = "promptng.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# When building the wheel, include the promptng package.
[tool.hatch.build.targets.wheel]
packages = ["promptng"]

# Install package with prompts
[tool.hatch.build]
include = [
  "promptng/prompts/**/*.md",
  "promptng/prompts/**/*.yaml"
]
